src/objects/Daily_Loan_Accrual__c.object
<CustomObject>
    <fields>
        <fullName>Accrual_Date__c</fullName>
        <description>Date on which accrual is posted.</description>
        <inlineHelpText>Date on which accrual is posted.</inlineHelpText>
        <label>Accrual Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Accrued_Interest__c</fullName>
        <description>This field is deprecated and should not be used.</description>
        <inlineHelpText>This field is deprecated and should not be used.</inlineHelpText>
        <label>Accrued Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eighteenth__c</fullName>
        <description>Accrual for Eighteenth day of the month.</description>
        <inlineHelpText>Accrual for Eighteenth day of the month.</inlineHelpText>
        <label>Eighteenth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eigth__c</fullName>
        <description>Accrual for eight day of the month.</description>
        <inlineHelpText>Accrual for eight day of the month.</inlineHelpText>
        <label>Eight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eleventh__c</fullName>
        <description>Accrual for Eleventh day of the month.</description>
        <inlineHelpText>Accrual for Eleventh day of the month.</inlineHelpText>
        <label>Eleventh</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fifteenth__c</fullName>
        <description>Accrual for Fifteenth day of the month.</description>
        <inlineHelpText>Accrual for Fifteenth day of the month.</inlineHelpText>
        <label>Fifteenth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fifth__c</fullName>
        <description>Accrual for Fifth day of the month.</description>
        <inlineHelpText>Accrual for Fifth day of the month.</inlineHelpText>
        <label>Fifth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First__c</fullName>
        <description>Accrual for first day of the month.</description>
        <inlineHelpText>Accrual for first day of the month.</inlineHelpText>
        <label>First</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fourteenth__c</fullName>
        <description>Accrual for Fourteenth day of the month.</description>
        <inlineHelpText>Accrual for Fourteenth day of the month.</inlineHelpText>
        <label>Fourteenth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fourth__c</fullName>
        <description>Accrual for Fourth day of the month.</description>
        <inlineHelpText>Accrual for Fourth day of the month.</inlineHelpText>
        <label>Fourth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Overdue_Fees__c</fullName>
        <description>This field is deprecated and should not be used.</description>
        <inlineHelpText>This field is deprecated and should not be used.</inlineHelpText>
        <label>Interest Overdue Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_Overdue_Interest__c</fullName>
        <description>This field is deprecated and should not be used.</description>
        <inlineHelpText>This field is deprecated and should not be used.</inlineHelpText>
        <label>Interest Overdue Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_Overdue_Penalty__c</fullName>
        <description>This field is deprecated and should not be used.</description>
        <inlineHelpText>This field is deprecated and should not be used.</inlineHelpText>
        <label>Interest Overdue Penalty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_Overdue_Principal__c</fullName>
        <description>This field is deprecated and should not be used.</description>
        <inlineHelpText>This field is deprecated and should not be used.</inlineHelpText>
        <label>Interest Overdue Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Account</label>
        <referenceTo>Loan_Account__c</referenceTo>
        <relationshipLabel>Daily Loan Accrual</relationshipLabel>
        <relationshipName>Daily_Loan_Accrual</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month_Id__c</fullName>
        <label>Month Id</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Nineteenth__c</fullName>
        <description>Accrual for Nineteenth day of the month.</description>
        <inlineHelpText>Accrual for Nineteenth day of the month.</inlineHelpText>
        <label>Nineteenth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ninth__c</fullName>
        <description>Accrual for ninth day of the month.</description>
        <inlineHelpText>Accrual for ninth day of the month.</inlineHelpText>
        <label>Ninth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outstanding_Principal__c</fullName>
        <description>This field is deprecated and should not be used.</description>
        <inlineHelpText>This field is deprecated and should not be used.</inlineHelpText>
        <label>Outstanding Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Posted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if this accrual entry has been posted into the loan account table.</description>
        <inlineHelpText>Denotes if this accrual entry has been posted into the loan account table.</inlineHelpText>
        <label>Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Second__c</fullName>
        <description>Accrual for second day of the month.</description>
        <inlineHelpText>Accrual for second day of the month.</inlineHelpText>
        <label>Second</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seventeenth__c</fullName>
        <description>Accrual for Seventeenth day of the month.</description>
        <inlineHelpText>Accrual for Seventeenth day of the month.</inlineHelpText>
        <label>Seventeenth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seventh__c</fullName>
        <description>Accrual for seventh day of the month.</description>
        <inlineHelpText>Accrual for seventh day of the month.</inlineHelpText>
        <label>Seventh</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sixteenth__c</fullName>
        <description>Accrual for Sixteenth day of the month.</description>
        <inlineHelpText>Accrual for Sixteenth day of the month.</inlineHelpText>
        <label>Sixteenth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sixth__c</fullName>
        <description>Accrual for sixth day of the month.</description>
        <inlineHelpText>Accrual for sixth day of the month.</inlineHelpText>
        <label>Sixth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Accrual_Date__c</fullName>
        <description>field added for testing. should be removed later.</description>
        <inlineHelpText>field added for testing. should be removed later.</inlineHelpText>
        <label>Temp Accrual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tenth__c</fullName>
        <description>Accrual for tenth day of the month.</description>
        <inlineHelpText>Accrual for tenth day of the month.</inlineHelpText>
        <label>Tenth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third__c</fullName>
        <description>Accrual for Third day of the month.</description>
        <inlineHelpText>Accrual for Third day of the month.</inlineHelpText>
        <label>Third</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thirteenth__c</fullName>
        <description>Accrual for Thirteenth day of the month.</description>
        <inlineHelpText>Accrual for Thirteenth day of the month.</inlineHelpText>
        <label>Thirteenth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thirtieth__c</fullName>
        <description>Accrual for Thirtieth day of the month.</description>
        <inlineHelpText>Accrual for Thirtieth day of the month.</inlineHelpText>
        <label>Thirtieth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thirty_First__c</fullName>
        <description>Accrual for Thirty First day of the month.</description>
        <inlineHelpText>Accrual for Thirtieth day of the month.</inlineHelpText>
        <label>Thirty First</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twelfth__c</fullName>
        <description>Accrual for twelfth day of the month.</description>
        <inlineHelpText>Accrual for twelfth day of the month.</inlineHelpText>
        <label>Twelfth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twentieth__c</fullName>
        <description>Accrual for Twentieth day of the month.</description>
        <inlineHelpText>Accrual for Twentieth day of the month.</inlineHelpText>
        <label>Twentieth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twenty_Eight__c</fullName>
        <description>Accrual for Twenty Eight day of the month.</description>
        <inlineHelpText>Accrual for Twenty Eight day of the month.</inlineHelpText>
        <label>Twenty Eight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twenty_Fifth__c</fullName>
        <description>Accrual for Twenty Fifth day of the month.</description>
        <inlineHelpText>Accrual for Twenty Fifth day of the month.</inlineHelpText>
        <label>Twenty Fifth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twenty_First__c</fullName>
        <description>Accrual for Twenty First day of the month.</description>
        <inlineHelpText>Accrual for Twenty First of the month.</inlineHelpText>
        <label>Twenty First</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twenty_Fourth__c</fullName>
        <description>Accrual for Twenty_Fourth__c day of the month.</description>
        <inlineHelpText>Accrual for Twenty_Fourth__c day of the month.</inlineHelpText>
        <label>Twenty Fourth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twenty_Ninth__c</fullName>
        <description>Accrual for Twenty_Ninth__c day of the month.</description>
        <inlineHelpText>Accrual for Twenty_Ninth__c day of the month.</inlineHelpText>
        <label>Twenty Ninth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twenty_Second__c</fullName>
        <description>Accrual for Twenty Second day of the month.</description>
        <inlineHelpText>Accrual for Twenty Second of the month.</inlineHelpText>
        <label>Twenty Second</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twenty_Seventh__c</fullName>
        <description>Accrual for Twenty Seventh day of the month.</description>
        <inlineHelpText>Accrual for Twenty Seventh of the month.</inlineHelpText>
        <label>Twenty Seventh</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twenty_Sixth__c</fullName>
        <description>Accrual for Twenty Sixth day of the month.</description>
        <inlineHelpText>Accrual for Twenty Sixth of the month.</inlineHelpText>
        <label>Twenty Sixth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twenty_Third__c</fullName>
        <description>Accrual for Twenty Third day of the month.</description>
        <inlineHelpText>Accrual for Twenty Third day of the month.</inlineHelpText>
        <label>Twenty Third</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Daily Loan Accrual</label>
    <nameField>
        <displayFormat>DLAID-{0000000000}</displayFormat>
        <label>Daily Loan Accrual ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Loan Accrual</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>